@startuml Consultorio
package Clinica
{
   
    
    package Inventario
    {

        interface IInsumo {
            Nombre: string
            Cantidad:int
            AddCantidad(int):void
            VerCantidad():int
            RestarCantidad(int):void
        }
        class Medicamento {
            - nombre: string
            - cantidad:int
            + AddCantidad(int):void
            + VerCantidad():int
            + RestarCantidad(int):void
        }
        class Desechables {
            - nombre: string
            - cantidad:int
            + AddCantidad(int):void
            + VerCantidad():int
            + RestarCantidad(int):void
        }
        class InsumoLimpieza {
            - nombre: string
            - cantidad:int
            + AddCantidad(int):void
            + VerCantidad():int
            + RestarCantidad(int):void
        }
    }
    

    enum Sexo{
        MASCULINO
        FEMENINO
        OTRO
    }
    enum Prevision{
        FONASA
        COLMENA
        CRUZBLANCA
        BANMEDICA
        CONSALUD
        FUNDACION_BANCO_DEL_ESTADO
        VIDA_TRES
        NUEVA_MAS_VIDA
    }

    enum AFP{
        CAPITAL
        HABITAT
        UNO
        CUPRUM
        MODELO
        PLANVITAL
        PROVIDA
    }
    enum EstadoTurno{
        SALA
        BOX
        FUERA
    }
        class Persona
        {
        - rut: int
        - nombre: string
        - apellidoPaterno: string
        - apellidoMaterno: string
        - email: string
        - digitoVerificador: int
        - sexo: Sexo
        - fechaNacimiento:DateTime
        - edad:int
        - direccion: string
        - telefono: int
        - prevision: Prevision
        - AFP: AFP
        + Nombre: string
        + ApellidoPaterno: string
        + ApellidoMaterno: string
        + Email: string
        + Rut: int
        + DigitoVerificador: int
        + Sexo: Sexo
        + FechaNacimiento:DateTime
        + Edad:int
        + Direccion: string
        + Telefono: int
        + Prevision: Prevision
        + AFP: AFP
        }

        package TrabajadoresExt
        {
        interface ITrabajadoresExternos{
            EmpresaContratista: string
            estadoTurno: EstadoTurno
        }
         class Limpieza{
            - empresaContratista:string
            + EmpresaContratista: string
            + estadoTurno: EstadoTurno
         }

        class Seguridad{
            - empresaContratista:string
            + EmpresaContratista: string
            + estadoTurno: EstadoTurno
        }
        }
        package Clientes
        {
            interface ICliente{
            MotivaDeConsulta:string
            fechaAtencion: DateTime
        }
        enum GrupoSanguineo
        {
            A
            B
            AB
            O
        }
        class FichaMedica
        {
          - grupoSanguineo: GrupoSanguineo
          - antecedentes: string
          - alergias: string
          - observaciones: string
          + GrupoSanguineo: GrupoSanguineo
          + Antecedentes: string
          + Alergias: string
          + Observaciones: string
        }

        enum Relacion{
            PADRE
            MADRE
            HIJO
            HIJA
            OTRO
        }
         class Paciente{
            - motivoDeConsulta: string
            - tieneTutor: bool
            - tutor: Tutor
            - fechaAtencion: DateTime
            - ficha:FichaMedica
            + CambiarFechaAtencion(DateTime): void
            + Tutor: Tutor
            + TieneTutor: bool
            + MotivaDeConsulta:string
            + FechaAtencion: DateTime
            + Ficha: Ficha
        }
        class Tutor{
            - relacionPaciente: Relacion
            + RelacionPaciente: Relacion
        }
        }
        

        
        package Usuarios
        {
            interface IUsuario
            {
                LogIn(string,string):void
                UserName:string
                Password:string
            }
            class Secretario{
                - userName: string
                - password: string
                - path: string
                + SalaDeEspera: sala
                + box: List<Box>
                + limpieza: List<Limpieza>
                + seguridad: List<Seguridad>
                + medicosClinica: List<Medico>
                + LogIn(string, string): void
                + LogOff(): void
                + AniadirPaciente(Medico, Paciente): void
                + ElimPaciente(Medico, Paciente): void
                + MarcarTurnoTExternoSeguridad(Seguridad, EstadoTurno): void
                + MarcarTurnoTExternoLimpieza(Limpieza, EstadoTurno): void
                + JsonListaBox(): void
                + JsonMedicos(): void
                +JsonSalaEspera(): void
            }

            class Medico{
                - userName: string
                - password: string
                - path: string
                + LogIn(string,string):void
                + LogOff(): void
                + UserName:string
                + Password:string
                + Path: string
                + AddHoraDisponible(DateTime): void
                + ElimHoraDisponible(DateTime): void
                + pacientes: List<Paciente>
                + horasDisponibles: List<DateTime>
                + RecuperarPacientesJson(): void
                + RecuperarhorasDispJason(): void
            }

          
        }
        package Infraestructura
         {
             interface IInfraestructura{
                 AddInsumoCantidad(IInsumo, int): int
                 ElimInsumocantidad(IInsumo, int):void
             }
             class Box{
                 - medicoDeTurno: Medico
                 - limpieza: Limpieza
                 - numeroBox: int
                 - desechables: List<Desechables>
                 - medicamentos: List<Medicamentos>
                 + NumeroBox: int
                 + LimpiarBox(List<Limpieza>):void
                 + AddInsumoCantidad(IInsumo, int):void
                 + ElimInsumocantidad(IInsumo, int):void
             }
             class SalaDeEspera {
                 - seguridadDeTurno: List<Seguridad>
                 - insumoLimpieza: List<InsumoLimpieza>
                 + LimpiezaSala(List<Limpieza>): void
                 + AddInsumoCantidad(IInsumo, int):void
                 + ElimInsumoCantidad(IInsumo, int):void
                 + CambiodeTurno(Seguridad, Seguridad): void
             }
             

         }
        'Relaciones
        'Herencias
        
        Persona<|-- Tutor
        Persona<|-- Paciente
        Persona<|-- Secretario
        Persona<|-- Medico
        Persona<|-- Limpieza
        Persona<|-- Seguridad



        'Composicion
        '(Se tienen en campo y no existen sin estar dentro de la clase)
        Paciente *-- Tutor
        Box *-- Medicamento
        Box *-- Desechables
        Paciente *-- FichaMedica
        'Agregacion
        '(Se tienen en campo pero existen independiente)
        Box o-- Medico
        SalaDeEspera o-- Seguridad
        Box  o-- Limpieza
        
        'Asociacion
        '(Interactuan pero son independientes, ej: pueden estar en metodo de el objeto)
        Medico -- Paciente
        Medico -- FichaMedica
        Medico -- IInsumo
        Secretario -- IInsumo
        Secretario -- Paciente
        Secretario -- Medico
        Secretario -- IInfraestructura
        'Interfaces:

        
        'Interfaz T externos
        ITrabajadoresExternos <|.. Limpieza
        ITrabajadoresExternos <|.. Seguridad
        'Interfaz Usuarios
        IUsuario <|.. Secretario
        IUsuario <|.. Medico
        'Interfaz Clientes
        ICliente <|.. Paciente
        'Interfaz Insumos
        IInsumo <|.. Medicamento
        IInsumo <|.. Desechables
        IInsumo <|.. InsumoLimpieza
        'Interfaz Infraestructura
        IInfraestructura <|.. Box
        IInfraestructura <|.. SalaDeEspera
        
    
    
}
@enduml